<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EZ Tracker</string>
    <string name="login_forgotPw">Forgot Your Password?</string>
    <string name="login_signUp">Sign Up</string>
    <string name="login_login">Login</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_home">Login</string>
    <string name="login_reset_password">Reset Password</string>
    <string name="login_create_account">Create Account</string>
    <string name="register_email">E-Mail *</string>
    <string name="register_registration">Registration</string>
    <string name="register_name">Name</string>
    <string name="register_female">Female</string>
    <string name="register_male">Male</string>
    <string name="register_height_m">Height (cm)</string>
    <string name="register_weight_kg">Weight (kg)</string>
    <string name="register_password">Password *</string>
    <string name="register_bday">Birthday (YYYY/MM/DD)</string>
    <string name="home_title">Home</string>
    <string name="home_weekly_steps">Weekly Steps</string>
    <string name="home_daily_steps">Daily Steps</string>
    <string name="home_achievements">Goals</string>
    <string name="home_goalHint">Walk over 5000 steps for 30 days</string>
    <string name="home_phrase">Almost there! Keep it up!</string>
    <string name="homemenu_quit">Quit</string>
    <string name="homemenu_settings">Settings</string>
    <string name="home_goalspercent">65%</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="indicates_a_required_field">* indicates a required field</string>
    <string name="save_information">Save Information</string>
    <string name="update_information">Update Information</string>
    <string name="update_weight">Weight (kg)</string>
    <string name="update_height">Height (cm)</string>
    <string name="birth_yyyymmdd">Birth (YYYY/MM/DD)</string>
    <string name="welcome">Welcome Home</string>
    <string name="view_weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="view_information">View Information</string>
    <string name="settings">Settings</string>
    <string name="push_notifications">Push Notifications </string>
    <string name="about_us_header">About Us</string>
    <string name="view_information_header">View Information</string>
    <string name="version_number">v0.5</string>
    <string name="aboutus_statement">EZ Tracker was created through the collaborative effort of Ryan Maynard, Jonas Gamao, and Delroy Christie. The app was developed out of a need from a certain segment of the population for a simple, yet powerful tool to help them on the road to a healthy and productive life. Much thought went into creating a simple user interface that even the not so-savvy user can readily understand and navigate.</string>
    <string name="delroy_christie">Delroy Christie</string>
    <string name="RM">Ryan Maynard</string>
    <string name="JG">Jonas Gamao</string>
    <string name="verify_email">Verify Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="app_bar_font">sans-serif-smallcaps</string>
    <string name="homeactive_monday">monday</string>
    <string name="home_tuesday">tuesday</string>
    <string name="homewednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">sunday</string>
    <string name="goal_steps">Goal</string>
    <string name="current_steps">Current Steps</string>
    <string name="percent_to_completion">Percent to Completion</string>
    <string name="weekly_goal">Weekly Goal</string>
    <string name="set_goal_pop">Set</string>
    <string name="set_goal">Set Goal</string>
    <string name="save_goal_popper">Save Goal</string>
    <string name="enter_goal_popper">Enter Goal</string>
    <string name="settings_about_us">About Us</string>
    <string name="settings_view_information">View Information</string>
    <string name="settings_update_information">Update Information</string>
    <string name="home_dailySteps">Daily Steps</string>
    <string name="home_totalSteps">Total Steps</string>
    <string name="home_remainSteps">Remaining Steps</string>
    <string name="pi_goal">Goal</string>
    <string name="setting_change_language">Change Language</string>
    <string name="choose_Eng">English</string>
    <string name="choose_french">Français</string>
    <string name="view_Name">Name</string>
    <string name="view_Weight">Weight</string>
    <string name="view_Height">Height</string>
    <string name="view_DOB">Date of Birth</string>
    <string name="main2_Developers">Developers</string>
    <string name="main2_Statement">Statement</string>
    <string name="home_goal">Goal</string>
    <string name="home_pie_total">Total</string>
    <string name="bar_Mon">Mon</string>
    <string name="bar_Tue">Tue</string>
    <string name="bar_Wed">Wed</string>
    <string name="bar_Thurs">Thurs</string>
    <string name="bar_Fri">Fri</string>
    <string name="bar_Sat">Sat</string>
    <string name="bar_Sun">Sun</string>
    <string name="loginToast_email">Please enter e-mail</string>
    <string name="loginToast_pw">Please enter password</string>
    <string name="loginToast_success">Successfully Logged In</string>
    <string name="loginToast_incorrect">Incorrect E-mail or Password</string>
    <string name="login_LangSelect">Select Language</string>
    <string name="toastReg_email">Please enter e-mail</string>
    <string name="toastReg_pw">Please enter password</string>
    <string name="toastReg_success">Registered Successfully</string>
    <string name="toastReg_fail">Cannot Register</string>
    <string name="toastReset_email">Please enter e-mail</string>
    <string name="toastReset_sent">E-mail sent</string>
    <string name="toastReset_dne">E-mail does not exist</string>
    <string name="pop_EnterVal">Enter a value</string>
    <string name="pop_Saved">Goal Saved</string>
    <string name="pop_Error">Enter a value more than your current steps.</string>
    <string name="pop_connectErr">Cannot Connect</string>
    <string name="settings_SelectLang">Select Language</string>
    <string name="update_Saved">Information Saved</string>
    <string name="toastView_unavail">Data unavailable, please try again later</string>
    <string name="toastHome_connectErr">Cannot Contact Server</string>
    <string name="toastHome_connErr">Cannot connect to server</string>
    <string name="toastHome_signedout">Signed Out</string>
    <string name="update_entName">Enter a name</string>
    <string name="update_entHeight">Enter a height</string>
    <string name="update_entWeight">Enter a weight</string>
    <string name="update_entDob">Enter a date of birth</string>
    <string name="textview_tester">TextView</string>
    <string name="bar_RealSteps">Steps:</string>
</resources>

