<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/registerRunner"
        android:layout_width="600dp"
        android:layout_height="match_parent"
        android:background="@drawable/running_man2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/registerBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="#ea023b54"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <EditText
        android:id="@+id/registerName"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="@+id/registerBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBar"
        app:layout_constraintVertical_bias="0.16000003" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registerBar"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginBottom="8dp"
        android:background="#afac0641"
        app:layout_constraintBottom_toBottomOf="@+id/registerBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/register_registration"
        android:textAllCaps="true"
        android:textColor="#f7f7f7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/registerBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/registerBackButton"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="283dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/registerWeight"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/update_weight"
        android:inputType="numberDecimal"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/registerHeight"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/update_height"
        android:inputType="numberDecimal"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerWeight"
        app:layout_constraintVertical_bias="0.0" />



    <EditText
        android:id="@+id/registerDob"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#f7f7f7"
        android:ems="10"
        android:hint="@string/birth_yyyymmdd"
        android:inputType="date"
        android:textColor="#f7f7f7"
        android:textColorHint="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerHeight"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/registerRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#ac0641"
        android:text="Register"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerDob"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registerBackButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/icarrow"
        app:layout_constraintBottom_toBottomOf="@+id/registerBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerBar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerRequirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/indicates_a_required_field"
        android:textColor="#f7f7f7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBar"
        app:layout_constraintVertical_bias="0.060000002" />


</android.support.constraint.ConstraintLayout>